# Recruitment-Task

./: CMakeLists.txt  CoinDelegate.qml  CryptoModel.cpp  CryptoModel.h  ErrorPopup.qml  Main.qml  NetworkWorker.cpp  NetworkWorker.h  README.md  Resource.qrc  ViewProxy.cpp  ViewProxy.h  icons.qrc  main.cpp
